@@ -1,40 +1,30 @@
 package Service;
 
+import iGeneric.Generic;
 import Entity.Account;
-import Entity.Gender;
-
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class AccountService {
+public class AccountService implements Generic<Account> {
     private List<Account> accounts = new ArrayList<>();
+    @Override
+    public void update(Account account) {
 
-    public AccountService(List<Account> accounts) {
-        this.accounts = accounts;
     }
 
-    public List<Account> getAccountByCustomerName(String keyword) {
+
+    @Override
+    public Account getById(int id) {
         return accounts.stream()
-                .filter(account -> account.getCustomer().getName().equalsIgnoreCase(keyword))
-                .collect(Collectors.toList());
+                .filter(account -> account.getId() == id)
+                .findFirst()
+                .orElse(null);
     }
 
-
-    public List<Account> getAccountCustomerMaleMoreThan1M(double v) {
+    @Override
+    public List<Account> getByName(String name) {
         return accounts.stream()
-                .filter(account ->
-                        account.getCustomer().getGender() == Gender.M &&
-                                account.getBalance() > 1000000.0)
-                .collect(Collectors.toList());
+                .filter(account -> account.getCustomer().getName().equalsIgnoreCase(name))
+                .toList();
     }
-
-    public long countAccountCustomerFemaleMoreThan100k(double v) {
-        return accounts.stream()
-                .filter(account ->
-                        account.getCustomer().getGender() == Gender.F &&
-                                account.getBalance() > 100000.0)
-                .count();
-    }
-
 }
